--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  
   <title>Atividade 1 | Frontend</title>
 </head>
 <body>
-  <h1>teste</h1>
+  <main class="content">
+    <div>
+      <h1>Ofuscador de textos</h1>
+      <textarea >
+      </textarea>
+      <div class="buttonContent">
+        <button>Ofuscar</button>
+        <button class="mrgLeft">Desofuscar</button>
+      </div>
+      
+      <div>
+        Omberinis, enterufter somberufter aispenternaiss ufterm penterqufterenternomber 
+          tenterxtomber denter enterxentermplomber!
+      </div>
+    </div>
+  </main>
 </body>
 </html>
