:art: _modificado script

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <main class="content">
     <div>
       <h1>Ofuscador de textos</h1>
-      <textarea >
+      <textarea id="boxText">
       </textarea>
       <div class="buttonContent">
-        <button>Ofuscar</button>
+        <button onclick="handleShadow()">Ofuscar</button>
         <button class="mrgLeft">Desofuscar</button>
       </div>
       
@@ -27,5 +27,6 @@
       </div>
     </div>
   </main>
+  <script src="script.js" />
 </body>
 </html>
